[SQLLINE-155] Do not use default encoding
[SQLLINE-154] Do not use default locale

In maven, use forbidden-apis to ensure that we are not implicitly using
default locale or encoding; make corrections based on forbidden-api
report. For instance, use Locale.ROOT instead of Locale.getDefault();
and use String.toUpperCase(Locale.ROOT) rather than String.toUpperCase().

Update h2 version to 1.4.197.

Remove calls to deprecated methods.